--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,8 +11,11 @@
 
   <script src="./lib/angular.min.js"></script>
   <script src="./js/app.js"></script>
-  <script src="./js/controllers/post-controller.js"></script>
-  <script src="./js/services/post-service.js"></script>
+  <script src="./js/controllers/post.js"></script>
+  <script src="./js/services/post.js"></script>
+  <script src="./js/values/config.js"></script>
+  <script src="./js/filters/first-name.js"></script>
+  <script src="./js/filters/capitalize.js"></script>
 </head>
 
 <body>
@@ -31,7 +34,7 @@
             </button>
           </div>
             <p ng-if="loggedUser" class="doca-text--normal">
-              Olá, {{loggedUser.name.split(' ')[0]}}
+              Olá, {{loggedUser.name | FirstNameFilter | CapitalizeFilter}}
             </p>
         </div>
       </div>
