--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,11 +11,16 @@
 
   <script src="./lib/angular.min.js"></script>
   <script src="./js/app.js"></script>
+
   <script src="./js/controllers/post.js"></script>
+
   <script src="./js/services/post.js"></script>
+
   <script src="./js/values/config.js"></script>
+
   <script src="./js/filters/first-name.js"></script>
   <script src="./js/filters/capitalize.js"></script>
+  <script src="./js/filters/summary.js"></script>
 </head>
 
 <body>
@@ -48,7 +53,7 @@
             Publicado por {{post.user.name}} | {{post.available_at | date:'dd/MM/yyyy HH:mm'}}
           </p>
           <p class="doca-card__subtitle doca-mb-8">
-            {{post.summary}}
+            {{post.summary | SummaryFilter}}
           </p>
           <span>
             <i class="doca-icon doca-icon__thumbs-up doca-icon--solid"></i> {{post.likes}}
