--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,7 +11,10 @@
   <link rel="stylesheet" href="./css/post-card.css">
 
   <script src="./lib/angular.min.js"></script>
+  <script src="./lib/angular-route.min.js"></script>
   <script src="./js/app.js"></script>
+
+  <script src="./js/config/route.js"></script>
 
   <script src="./js/controllers/home.js"></script>
 
@@ -29,12 +32,11 @@
 
 <body>
   <div class="doca">
-    <div class="doca-page" ng-controller="HomeController">
+    <div class="doca-page" style="min-height: 100vh;">
       <app-header></app-header>
-      <post-card ng-repeat="post in posts track by post.id"></post-card>
-    </div>
+      <div ng-view></div>
   </div>
-
+  </div>
 </body>
 
 </html>
