--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/doca-ui.css">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/post-card.css">
+  <link rel="stylesheet" href="./css/post-page.css">
 
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/angular-route.min.js"></script>
@@ -17,6 +18,7 @@
   <script src="./js/config/route.js"></script>
 
   <script src="./js/controllers/home.js"></script>
+  <script src="./js/controllers/post.js"></script>
 
   <script src="./js/services/post.js"></script>
 
