--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medium Amigo</title>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/doca-ui.css">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/post-card.css">
@@ -13,14 +14,17 @@
 
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/angular-route.min.js"></script>
+  <script src="./lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
   <script src="./js/app.js"></script>
 
   <script src="./js/config/route.js"></script>
 
   <script src="./js/controllers/home.js"></script>
   <script src="./js/controllers/post.js"></script>
+  <script src="./js/controllers/modal-login.js"></script>
 
   <script src="./js/services/post.js"></script>
+  <script src="./js/services/user.js"></script>
 
   <script src="./js/directives/post-card.js"></script>
   <script src="./js/directives/app-header.js"></script>
