--- a/webapp/index.html
+++ b/webapp/index.html
@@ -23,6 +23,7 @@
   <script src="./js/controllers/post.js"></script>
   <script src="./js/controllers/modal-login.js"></script>
   <script src="./js/controllers/modal-signup.js"></script>
+  <script src="./js/controllers/modal-delete.js"></script>
 
   <script src="./js/services/post.js"></script>
   <script src="./js/services/user.js"></script>
