criação e edição de posts

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,6 +24,7 @@
   <script src="./js/controllers/modal-login.js"></script>
   <script src="./js/controllers/modal-signup.js"></script>
   <script src="./js/controllers/modal-delete.js"></script>
+  <script src="./js/controllers/modal-post.js"></script>
 
   <script src="./js/services/post.js"></script>
   <script src="./js/services/user.js"></script>
